# dio-domains

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  THIRD_PARTY_LICENSES  a.out  config.json  deploy.sh  dio.opam  dune-project  leak_log.txt  leak_log_long.txt  parse_test.ml  report_final.md  report_generator.py  report_test.md  scratch.ml  scratch_parse.ml  spot.json  spot_meta.json  test_gc  test_gc.ml  test_relax  test_relax.ml  trace.ctf  verify_log.txt  verify_log_2.txt
.cursor/rules/: architecture.mdc  automated-garbage-collecetion-broken.mdc  data-structure-access.mdc  data-structure-creation.mdc
.github/workflows/: ci.yml
data/: accumulated_state.json
parse_test/: parse_test.ml
proxy/cloudflare/: package-lock.json  package.json  wrangler.toml
proxy/cloudflare/src/: index.ts
src/dashboard_ui/: app.ml  dune  footer.ml  header.ml  holdings.ml  latencies.ml  memory.ml  recent_fills_feed.ml  theme.ml  ticker_feed.ml
src/engine/: config.ml  domain_spawner.ml  dune  order_executor.ml
src/engine/concurrency/: dune  event_bus.ml  event_registry.ml  exchange_wakeup.ml  fill_event_bus.ml  lwt_util.ml  ring_buffer.ml  ringbuffer.ml  startup_coordinator.ml  tick_event_bus.ml
src/engine/dashboard/: dashboard_server.ml  dashboard_state.ml  dune
src/engine/error_handling/: dune  error_handling.ml
src/engine/latency_profiling/: dune  gc_monitor.ml  latency_profiler.ml
src/engine/logging/: dune  logging.ml
src/engine/memory_cleanup/: dune  memory_cleanup_events.ml  memory_cleanup_service.ml
src/engine/memory_management/: cleanup_coordinator.ml  dune  memory_events.ml
src/engine/memory_tracing/: README.md  allocation_tracker.ml  cleanup_coordinator.ml  config.ml  domain_profiler.ml  dune  leak_detector.ml  memory_events.ml  memory_tracing.ml  reporter.ml  runtime_events_tracer.ml
src/engine/persistence/: dune  state_persistence.ml
src/engine/strategies/: auto_hedger.ml  dune  fee_cache.ml  market_maker.ml  market_maker.txt  strategy_common.ml  suicide_grid.ml  suicide_grid.txt
src/engine/supervisor/: dune  supervisor.ml  supervisor_cache.ml  supervisor_types.ml
src/engine/telemetry/: dune  telemetry.ml
src/exchange/: README.md  dune
src/exchange/cmc/: fear_and_greed.ml
src/exchange/kraken/: dune  kraken.ml  kraken_actions.ml  kraken_balances_feed.ml  kraken_common_types.ml  kraken_executions_feed.ml  kraken_generate_auth_token.ml  kraken_get_fee.ml  kraken_instruments_feed.ml  kraken_module.ml  kraken_orderbook_feed.ml  kraken_ticker_feed.ml  kraken_trading_client.ml
src/ui/: dashboard.ml  design_tokens.ml  dune  layout.ml  metrics_broadcast.ml  metrics_json.ml  ui_components.ml
src/ui/balance_view/: balance_cache.ml  balance_view.ml  dune
src/ui/cache/: balance_cache.ml  dune  logs_cache.ml  system_cache.ml  telemetry_cache.ml
src/ui/logs_view/: dune  logs_cache.ml  logs_view.ml
src/ui/shared/: design_tokens.ml  dune  formatters.ml  layout.ml  ui_components.ml
src/ui/system_view/: dune  system_cache.ml  system_view.ml
src/ui/telemetry_view/: dune  telemetry_cache.ml  telemetry_view.ml
src/ui/types/: dune  ui_types.ml
test/: dune
test/engine/concurrency/: dune  test_event_bus.ml  test_event_registry.ml
test/engine/config/: dune  test_config.ml
test/engine/domain_spawner/: dune  test_domain_spawner.ml
test/engine/latency_profiling/: dune  test_latency_profiler.ml
test/engine/logging/: dune  test_logging.ml
test/engine/memory_trace/: dune  test_memory_report.ml
test/engine/order_executor/: dune  test_order_executor.ml
test/engine/order_executor/order_cache/: dune  test_order_cache.ml
test/engine/perf/: bench.ml  dune  gc_hammer.ml
test/engine/strategies/: dune  test_auto_hedger.ml  test_market_maker.ml  test_strategy_common.ml  test_suicide_grid.ml
test/engine/supervisor/: dune  test_supervisor.ml
test/engine/telemetry/: dune  test_telemetry.ml
test/exchange/cmc/: dune  test_fear_and_greed.ml
test/exchange/hyperliquid/: dune  test_hyperliquid_actions.ml  test_hyperliquid_balances.ml  test_hyperliquid_balances_feed.ml  test_hyperliquid_executions_feed.ml  test_hyperliquid_get_fee.ml  test_hyperliquid_instruments_feed.ml  test_hyperliquid_module.ml  test_hyperliquid_orderbook_feed.ml  test_hyperliquid_parsing.ml  test_hyperliquid_signer.ml  test_hyperliquid_ticker_feed.ml  test_hyperliquid_types.ml  test_hyperliquid_ws.ml
test/exchange/kraken/: dune  test_kraken_actions.ml  test_kraken_common_types.ml  test_kraken_executions_feed.ml  test_kraken_generate_auth_token.ml  test_kraken_orderbook_feed.ml  test_kraken_trading_client.ml
