(subdir engine/concurrency)
(subdir engine/logging)
(subdir engine/order_executor)
(subdir engine/strategies)
(subdir engine/supervisor)
(subdir engine/telemetry)
(subdir engine/config)
; (subdir engine/domain_spawner)  ; FIXME: test hangs, disabled temporarily
(subdir exchange/kraken)
(subdir order_cache)
