(executable
 (name bench)
 (libraries
  dio.strategies
  dio.engine
  dio.latency_profiling
  mtime
  mtime.clock.os
  unix))

(executable
 (name gc_hammer)
 (libraries
  dio.latency_profiling
  mtime
  unix))

(rule
 (alias runtest)
 (deps
  (universe)
  %{exe:bench.exe}
  (alias ../../external/cmc/runtest)
  (alias ../../external/hyperliquid/runtest)
  (alias ../../external/kraken/runtest)
  (alias ../config/runtest)
  (alias ../order_executor/runtest)
  (alias ../order_executor/order_cache/runtest)
  (alias ../strategies/runtest)
  (alias ../latency_profiling/runtest)
  (alias ../domain_spawner/runtest)
  (alias ../concurrency/runtest)
  (alias ../logging/runtest)
  (alias ../supervisor/runtest))
 (action
  (run %{exe:bench.exe})))
