(test
 (name test_market_maker)
 (libraries dio.strategies dio.engine alcotest))

(test
 (name test_strategy_common)
 (libraries dio.strategies dio.engine alcotest))

(test
 (name test_suicide_grid)
 (libraries dio.strategies dio.engine dio.hyperliquid alcotest))

(test
 (name test_auto_hedger)
 (libraries dio.strategies dio.engine alcotest))
